Inserimento della play-bar

--- a/index.html
+++ b/index.html
@@ -83,17 +83,66 @@
                     <span>Nome playlist</span>
                 </div>
             </div>
+
+            <div class="utente max-width">
+                <div class="d-flex">
+                    <div class="d-flex justify-center align-center circle">
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                    <span>Installa app</span>
+                </div>
+                <hr>
+                <div class="max-width d-flex align-center color-white">
+                    <div class="profile d-flex justify-center align-center">
+                        <img src="spotify/img/profile.svg" alt="profile">
+                    </div>
+                    <span style="font-size: 0.9em;margin-left: 5px;">Don Joe</span>
+                </div>
+                
+            </div>
         </div>
         <div class="main-content">
 
         </div>
     </div>
     <div class="position-fixed music-bar d-flex d-space-between">
-        <div class="titolo-brano">
-
+        <div class="titolo-brano d-flex align-center max-height">
+            <div class="titolo-bar d-flex">
+                <img src="spotify/img/sinister.jpeg" alt="sinister">
+                <div class="d-column nome-canzone max-height justify-center color-white">
+                    <h5>Sinister</h5>
+                    <span>Brano Nome</span>
+                </div>
+                <div class="d-flex align-center icon-bar">
+                    <i class="fa-regular fa-heart" style="color: #a3a3a3;"></i>
+                    <i class="fa-regular fa-folder" style="color: #a3a3a3;"></i>
+                </div>
+            </div>
         </div>
-        <div></div>
-        <div></div>
+        <div class="avvia-canzone max-height d-column justify-center color-white">
+            <div class="half-height d-flex justify-center color-white stop-audio">
+                <i class="fa-solid fa-shuffle"></i>
+                <i class="fa-solid fa-backward-step"></i>
+                <i class="fa-regular fa-circle-play" style="font-size: 1.5em;"></i>
+                <i class="fa-solid fa-forward-step"></i>
+                <i class="fa-solid fa-arrow-rotate-right"></i>
+            </div>
+            <div class="durata-canzone half-height d-flex d-space-between ">
+                <span>0.25</span>
+                <div class="bar">
+                </div>
+                <span>4.75</span>
+            </div>
+        </div>
+        <div class="other-options color-white d-flex align-center">
+            <div class="half-height d-flex max-width justify-end align-center">
+                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <div class="bar" style="width: 40%;margin-left: 5px;">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
