Inserimento contenuto principale nella pagina

--- a/index.html
+++ b/index.html
@@ -102,7 +102,92 @@
             </div>
         </div>
         <div class="main-content">
+            <div class="nav d-flex align-center justify-end position-absolute max-width">
+                <div class="half-height upgrade color-white d-flex justify-center align-center">
+                    <span>EFFETTUA UPGRADE</span>
+                </div>
+            </div>
+            <div class="categorie color-white">
+                <span>IN EVIDENZA</span><span>PODCAST</span><span>CLASSIFICHE</span><span>GENERI E MOOD</span><span>NUOVE USCITE</span><span>SCOPRI</span>
+            </div>
 
+            <div class="brani">
+                <div class="di-recente max-width d-flex ">
+                    <h2 class="color-white">
+                        Recently played
+                    </h2>
+                </div>
+
+                <div class="album-recenti max-width d-flex">
+                    <div class="d-column align-center">
+                        <img src="spotify/img/metal_lifting.jpg" alt="metal" class="max-width">
+                        <h4 class="color-white">Heavy Metal</h4>
+                        <span class="color-white">subtitle</span>
+                    </div>
+                    <div class="d-column align-center">
+                        <img src="spotify/img/stranger.jpeg" alt="metal" class="max-width">
+                        <h4 class="color-white">Stranger Things vol. 1 (a netflix original series soundtracks)</h4>
+                        <span class="color-white">Kyle Dixon & Michael Stein</span>
+                    </div>
+                    <div class="d-column align-center">
+                        <img src="spotify/img/aquietplace.jpeg" alt="metal" class="max-width">
+                        <h4 class="color-white">Heavy Metal</h4>
+                        <span class="color-white">subtitle</span>
+                    </div>
+                    <div class="d-column align-center">
+                        <img src="spotify/img/split.jpeg" alt="metal" class="max-width">
+                        <h4 class="color-white">Heavy Metal</h4>
+                        <span class="color-white">subtitle</span>
+                    </div>
+                    <div class="d-column align-center">
+                        <img src="spotify/img/cure.jpeg" alt="metal" class="max-width">
+                        <h4 class="color-white">Heavy Metal</h4>
+                        <span class="color-white">subtitle</span>
+                    </div>
+                    <div class="d-column align-center">
+                        <img src="spotify/img/sinister.jpeg" alt="metal" class="max-width">
+                        <h4 class="color-white">Heavy Metal</h4>
+                        <span class="color-white">subtitle</span>
+                    </div>
+                </div>
+
+                <div class="john-joe color-white d-column">
+                    <div>
+                        <h2>Creato per John Joe</h2>
+                        <span style="color: #a3a3a3;">Più ascolti, piu accurati saranno i tuoi suggerimenti</span>
+                    </div>
+                    <div class="album-recenti max-width d-flex">
+                        <div class="d-column align-center">
+                            <img src="spotify/img/radar.jpeg" alt="metal" class="max-width">
+                            <h4 class="color-white">Release radar</h4>
+                        </div>
+                        <div class="d-column align-center">
+                            <img src="spotify/img/mixdaily.jpeg" alt="metal" class="max-width">
+                            <h4 class="color-white">Daily Mix 1</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="john-joe color-white d-column">
+                    <div>
+                        <h2>Artisti più popolari</h2>
+                        <span style="color: #a3a3a3;">Più ascolti, piu accurati saranno i tuoi suggerimenti</span>
+                    </div>
+                    <div class="album-recenti max-width d-flex">
+                        <div class="d-column align-center">
+                            <img src="spotify/img/youg.jpeg" alt="metal" class="max-width radius">
+                            <h4 class="color-white">Release radar</h4>
+                        </div>
+                        <div class="d-column align-center">
+                            <img src="spotify/img/einaudi.jpeg" alt="metal" class="max-width radius">
+                            <h4 class="color-white">Daily Mix 1</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            
+            
         </div>
     </div>
     <div class="position-fixed music-bar d-flex d-space-between">
