Inserimento hover nella pagina

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <span>EFFETTUA UPGRADE</span>
                 </div>
             </div>
-            <div class="categorie color-white">
+            <div class="categorie">
                 <span>IN EVIDENZA</span><span>PODCAST</span><span>CLASSIFICHE</span><span>GENERI E MOOD</span><span>NUOVE USCITE</span><span>SCOPRI</span>
             </div>
 
@@ -119,33 +119,63 @@
                 </div>
 
                 <div class="album-recenti max-width d-flex">
-                    <div class="d-column align-center">
-                        <img src="spotify/img/metal_lifting.jpg" alt="metal" class="max-width">
+                    <div class="d-column align-center padre-album">
+                        <div style="position: relative;">
+                            <img src="spotify/img/metal_lifting.jpg" alt="metal" class="max-width">
+                            <div class="max-width max-height img-hide d-flex justify-center align-center">
+                                <i class="fa-regular fa-circle-play icona-hover color-white"></i>
+                            </div>
+                        </div>
                         <h4 class="color-white">Heavy Metal</h4>
                         <span class="color-white">subtitle</span>
                     </div>
-                    <div class="d-column align-center">
-                        <img src="spotify/img/stranger.jpeg" alt="metal" class="max-width">
+                    <div class="d-column align-center padre-album">
+                        <div style="position: relative;">
+                            <img src="spotify/img/stranger.jpeg" alt="metal" class="max-width">
+                            <div class="max-width max-height img-hide d-flex justify-center align-center">
+                                <i class="fa-regular fa-circle-play icona-hover color-white"></i>
+                            </div>
+                        </div>
                         <h4 class="color-white">Stranger Things vol. 1 (a netflix original series soundtracks)</h4>
                         <span class="color-white">Kyle Dixon & Michael Stein</span>
                     </div>
-                    <div class="d-column align-center">
-                        <img src="spotify/img/aquietplace.jpeg" alt="metal" class="max-width">
+                    <div class="d-column align-center padre-album">
+                        <div style="position: relative;">
+                            <img src="spotify/img/aquietplace.jpeg" alt="metal" class="max-width">
+                            <div class="max-width max-height img-hide d-flex justify-center align-center">
+                                <i class="fa-regular fa-circle-play icona-hover color-white"></i>
+                            </div>
+                        </div>
                         <h4 class="color-white">Heavy Metal</h4>
                         <span class="color-white">subtitle</span>
                     </div>
-                    <div class="d-column align-center">
-                        <img src="spotify/img/split.jpeg" alt="metal" class="max-width">
+                    <div class="d-column align-center padre-album">
+                        <div style="position: relative;">
+                            <img src="spotify/img/split.jpeg" alt="metal" class="max-width">
+                            <div class="max-width max-height img-hide d-flex justify-center align-center">
+                                <i class="fa-regular fa-circle-play icona-hover color-white"></i>
+                            </div>
+                        </div>
                         <h4 class="color-white">Heavy Metal</h4>
                         <span class="color-white">subtitle</span>
                     </div>
-                    <div class="d-column align-center">
-                        <img src="spotify/img/cure.jpeg" alt="metal" class="max-width">
+                    <div class="d-column align-center padre-album">
+                        <div style="position: relative;">
+                            <img src="spotify/img/cure.jpeg" alt="metal" class="max-width">
+                            <div class="max-width max-height img-hide d-flex justify-center align-center">
+                                <i class="fa-regular fa-circle-play icona-hover color-white"></i>
+                            </div>
+                        </div>
                         <h4 class="color-white">Heavy Metal</h4>
                         <span class="color-white">subtitle</span>
                     </div>
-                    <div class="d-column align-center">
-                        <img src="spotify/img/sinister.jpeg" alt="metal" class="max-width">
+                    <div class="d-column align-center padre-album">
+                        <div style="position: relative;">
+                            <img src="spotify/img/sinister.jpeg" alt="metal" class="max-width">
+                            <div class="max-width max-height img-hide d-flex justify-center align-center">
+                                <i class="fa-regular fa-circle-play icona-hover color-white"></i>
+                            </div>
+                        </div>
                         <h4 class="color-white">Heavy Metal</h4>
                         <span class="color-white">subtitle</span>
                     </div>
@@ -157,12 +187,22 @@
                         <span style="color: #a3a3a3;">Più ascolti, piu accurati saranno i tuoi suggerimenti</span>
                     </div>
                     <div class="album-recenti max-width d-flex">
-                        <div class="d-column align-center">
-                            <img src="spotify/img/radar.jpeg" alt="metal" class="max-width">
+                        <div class="d-column align-center padre-album">
+                            <div style="position: relative;">
+                                <img src="spotify/img/radar.jpeg" alt="metal" class="max-width">
+                                <div class="max-width max-height img-hide d-flex justify-center align-center">
+                                    <i class="fa-regular fa-circle-play icona-hover color-white"></i>
+                                </div>
+                            </div>
                             <h4 class="color-white">Release radar</h4>
                         </div>
-                        <div class="d-column align-center">
-                            <img src="spotify/img/mixdaily.jpeg" alt="metal" class="max-width">
+                        <div class="d-column align-center padre-album">
+                            <div style="position: relative;">
+                                <img src="spotify/img/mixdaily.jpeg" alt="metal" class="max-width">
+                                <div class="max-width max-height img-hide d-flex justify-center align-center">
+                                    <i class="fa-regular fa-circle-play icona-hover color-white"></i>
+                                </div>
+                            </div>
                             <h4 class="color-white">Daily Mix 1</h4>
                         </div>
                     </div>
@@ -214,7 +254,11 @@
             </div>
             <div class="durata-canzone half-height d-flex d-space-between ">
                 <span>0.25</span>
-                <div class="bar">
+                <div class="bar d-flex max-width align-center justify-center">
+                    <div class="solid-bar" style="border: 2px solid rgb(255, 255, 255); width: 20%;"></div>
+                    <i class="fa-solid fa-circle circle-ball"></i>
+                    <div class="solid-bar" style="width: 60%; border: 2px solid rgb(163, 163, 163)">
+                </div>
                 </div>
                 <span>4.75</span>
             </div>
@@ -224,7 +268,10 @@
                 <i class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-volume-high"></i>
-                <div class="bar" style="width: 40%;margin-left: 5px;">
+                <div class="bar d-flex max-width align-center justify-center">
+                    <div class="solid-bar" style="border: 2px solid rgb(255, 255, 255); width: 20%;"></div>
+                    <i class="fa-solid fa-circle  circle-ball"></i>
+                    <div class="solid-bar" style="width: 60%; border: 2px solid rgb(163, 163, 163)">
                 </div>
             </div>
         </div>
