--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
                 
             </div>
         </div>
+        <div class="second-sidebar ">
+            <div class="max-width">
+                <img src="spotify/img/logo-small.svg" alt="logo small">
+            </div>
+            <div class="max-width">
+                <i class="fa-solid fa-house fa-l"></i>
+            </div>
+            <div class="max-width">
+                <i class="fa-solid fa-magnifying-glass fa-l"></i>
+            </div>
+            <div class="max-width">
+                <i class="fa-solid fa-book fa-l"></i>
+            </div>
+        </div>
         <div class="main-content">
             <div class="nav d-flex align-center justify-end position-absolute max-width">
                 <div class="half-height upgrade color-white d-flex justify-center align-center">
@@ -265,12 +279,14 @@
         </div>
         <div class="other-options color-white d-flex align-center">
             <div class="half-height d-flex max-width justify-end align-center">
-                <i class="fa-solid fa-bars"></i>
-                <i class="fa-solid fa-desktop"></i>
-                <i class="fa-solid fa-volume-high"></i>
+                <div class="d-flex">
+                    <i class="fa-solid fa-bars"></i>
+                    <i class="fa-solid fa-desktop"></i>
+                    <i class="fa-solid fa-volume-high"></i>
+                </div>
                 <div class="bar d-flex max-width align-center justify-center">
                     <div class="solid-bar" style="border: 2px solid rgb(255, 255, 255); width: 20%;"></div>
-                    <i class="fa-solid fa-circle  circle-ball"></i>
+                    <i class="fa-solid fa-circle"></i>
                     <div class="solid-bar" style="width: 60%; border: 2px solid rgb(163, 163, 163)">
                 </div>
             </div>
