posizionamento font "fa-circle"

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 <span>0.25</span>
                 <div class="bar d-flex max-width align-center justify-center">
                     <div class="solid-bar" style="border: 2px solid rgb(255, 255, 255); width: 20%;"></div>
-                    <i class="fa-solid fa-circle circle-ball"></i>
+                    <i class="fa-solid fa-circle"></i>
                     <div class="solid-bar" style="width: 60%; border: 2px solid rgb(163, 163, 163)">
                 </div>
                 </div>
